--- a/css/coding.css
+++ b/css/coding.css
@@ -13,3 +13,39 @@
   text-decoration: none;
   cursor: pointer;
 }
+.navbar-expand-lg  {
+  background: #000000;
+
+}
+.navbar-brand{
+  color : #ffffff;
+}
+.navbar-brand:hover, /* 네비게이션 제목에 마우스를올렷을시 */
+.nav-brand:focus{
+  background-color : transparent;
+  color : #bbbbbb
+
+}
+.navbar-nav > .active > a,
+.navbar-nav > .active > a:hover
+.navbar-nav > .active > a:focus {
+  color : #bbbbbb;
+}
+
+.navbar-nav > li > a:hover
+.navbar-nav > li > a:focus {
+
+  color : #bbbbbb;
+
+}
+.navbar-nav > .open > a,
+.navbar-nav > .open > a:hover
+.navbar-nav > .open > a:focus {
+  color : #000000;
+  background-color : #ffffff;
+  text-decoration: none;
+}
+.navbar-nav > li > a{
+  color : white;
+
+}
